# lyrics-analysis

./: .gitignore  README.md  analyse_lyrics.py  musixmatch.py  parse_lyrics.py  phonemeizer_server.py  pyproject.toml  scrape_lyrics.py  spotify.sparql  syllabify.py  the_fever.txt
words/: expletives.txt  friends.txt  love.txt  religion.txt  time.txt  war.txt
