[tool.poetry]
name = "lyrics-analysis"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "lyrics_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
lyricsgenius = "^3.0.1"
nltk = "^3.8.1"
deep-phonemizer = "^0.0.17"
panphon = "^0.20.0"
rhyme-trie = {git = "https://github.com/SuperSonicHub1/rhyme_trie/"}
matplotlib = "^3.7.0"
wordcloud = "^1.8.2.2"
flask = "^2.2.3"
mplcairo = "^0.5"
pygobject = "^3.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
